add option to save voicemail message as new

--- a/resources/templates/conf/languages/en/vm/sounds.xml
+++ b/resources/templates/conf/languages/en/vm/sounds.xml
@@ -373,6 +373,12 @@
         <action function="play-file" data="voicemail/vm-$1.wav"/>
       </match>
     </input>
+    <input pattern="^(marked_new)$">
+      <match>
+        <action function="play-file" data="voicemail/vm-message.wav"/>
+        <action function="play-file" data="voicemail/vm-$1.wav"/>
+      </match>
+    </input>
     <input pattern="^(emailed)$">
       <match>
         <action function="play-file" data="voicemail/vm-message.wav"/>
