split languages in to separate files

--- a/app/bridges/resources/languages/es-cl.ini
+++ b/app/bridges/resources/languages/es-cl.ini
@@ -1,4 +1,4 @@
-; Bridges English US
+; Bridges es-cl
 [title-]
 bridges = 'Bridges'
 bridge = 'Bridge'
@@ -13,4 +13,4 @@ description = 'Description'
 name = 'Enter the name.'
 destination = 'Enter the destination.'
 enabled = 'Select to enable or disable.'
-description = 'Enter the description. '
+description = 'Descripción'
